Add buttons to live sites and github

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<h1 id="logo"><a href="#">Jonathan Tsao</a></h1>
 					<p>NYC Coder<br>Foodie in Progress<br>Singer/Songwriter</p>
 					<div>
-						<a href="#" alt="Resume" class="icon fa-file-pdf-o"><span class="label">Resume</span> Resume</a>
+						<a href="docs/resume.pdf" alt="Resume" class="icon fa-file-pdf-o"><span class="label">Resume</span> Resume</a>
 					</div>
 				</header>
 				<nav id="nav">
@@ -65,6 +65,10 @@
 										<div class="inner">
 											<h4>ShareTube</h4>
 											<p>ShareTube is a full-stack web application modeled after YouTube. It is built using Ruby on Rails, a Postgresql database, and React.js with a Redux framework on the frontend.</p>
+											<div class="project-links">
+												<a href="http://www.thesharetube.com">Live Site</a>
+												<a href="https://www.github.com/jonathantsao/sharetube">Github</a>
+											</div>
 										</div>
 									</article>
 									<article>
@@ -72,6 +76,10 @@
 										<div class="inner">
 											<h4>Sushi Ninja</h4>
 											<p>SushiNinja is a fun single player game for sushi chefs of all ages. Players have three lives and click and drag to swing their blade. The game is built entirely using JavaScript with the help of processing library, p5. The Sushi Ninja was inspired by HalfBrick's Fruit Ninja.</p>
+											<div class="project-links">
+												<a href="https://www.jonathan-tsao.com/SushiNinja">Live Site</a>
+												<a href="https://www.github.com/jonathantsao/sushininja">Github</a>
+											</div>
 										</div>
 									</article>
 									<article>
@@ -79,6 +87,9 @@
 										<div class="inner">
 											<h4>Senro</h4>
 											<p>Senro is a Controller and Views framework built on Ruby that uses a Postgresql database. It can integrate Rack middleware and create views in response to HTTP requests. Senro was inspired by Ruby on Rails, and the word "Senro" is a japanese term for "train line".</p>
+											<div class="project-links">
+												<a href="https://www.github.com/jonathantsao/senro">Github</a>
+											</div>
 										</div>
 									</article>
 								</div>
@@ -279,11 +290,11 @@
 									<h3>Contact Me</h3>
 									<p id="contact-p">Want to collaborate or just to talk? Feel free to reach out about any questions, comments, or thoughts!</p>
 									<ul class="contact-icons">
-										<li><a href="https://www.github.com/jonathantsao" class="icon fa-github"><span class="label">Github</span></a> Github</li>
-										<li><a href="https://www.linkedin.com/in/jonathan-tsao/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a> LinkedIn</li>
-										<li><a href="https://angel.co/jonathan-tsao" class="icon fa-angellist"><span class="label">AngelList</span></a> AngelList</li>
-										<li><a href="mailto:tsao.jonathan13@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a> Email</li>
-										<li><a href="#" alt="Resume" class="icon fa-file-pdf-o"><span class="label">Resume</span> Resume</a></li>
+										<li><a href="https://www.github.com/jonathantsao" class="icon fa-github"><span class="label">Github</span> Github</a></li>
+										<li><a href="https://www.linkedin.com/in/jonathan-tsao/" class="icon fa-linkedin"><span class="label">LinkedIn</span> LinkedIn</a></li>
+										<li><a href="https://angel.co/jonathan-tsao" class="icon fa-angellist"><span class="label">AngelList</span> AngelList</a></li>
+										<li><a href="mailto:tsao.jonathan13@gmail.com" class="icon fa-envelope"><span class="label">Email</span> Email</a></li>
+										<li><a href="docs/resume.pdf" alt="Resume" class="icon fa-file-pdf-o"><span class="label">Resume</span> Resume</a></li>
 									</ul>
 								</div>
 							</section>
