--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Jonathan Tsao</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" href="images/jonathantsao.jpg">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	</head>
@@ -61,7 +62,7 @@
 								<h3>Personal Projects</h3>
 								<div class="features">
 									<article>
-										<a href="#" class="image"><img src="images/sharetube_preview.png" alt="" /></a>
+										<a href="http://www.thesharetube.com" class="image"><img src="images/sharetube_preview.png" alt="" /></a>
 										<div class="inner">
 											<h4>ShareTube</h4>
 											<p>ShareTube is a full-stack web application modeled after YouTube. It is built using Ruby on Rails, a Postgresql database, and React.js with a Redux framework on the frontend.</p>
@@ -72,18 +73,18 @@
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/sushininja_preview.png" alt="" /></a>
+										<a href="http://www.jonathan-tsao.com/SushiNinja" class="image"><img src="images/sushininja_preview.png" alt="" /></a>
 										<div class="inner">
 											<h4>Sushi Ninja</h4>
 											<p>SushiNinja is a fun single player game for sushi chefs of all ages. Players have three lives and click and drag to swing their blade. The game is built entirely using JavaScript with the help of processing library, p5. The Sushi Ninja was inspired by HalfBrick's Fruit Ninja.</p>
 											<div class="project-links">
-												<a href="https://www.jonathan-tsao.com/SushiNinja">Live Site</a>
+												<a href="http://www.jonathan-tsao.com/SushiNinja">Live Site</a>
 												<a href="https://www.github.com/jonathantsao/sushininja">Github</a>
 											</div>
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/senro_preview.png" alt="" /></a>
+										<a href="https://www.github.com/jonathantsao/senro" class="image"><img src="images/senro_preview.png" alt="" /></a>
 										<div class="inner">
 											<h4>Senro</h4>
 											<p>Senro is a Controller and Views framework built on Ruby that uses a Postgresql database. It can integrate Rack middleware and create views in response to HTTP requests. Senro was inspired by Ruby on Rails, and the word "Senro" is a japanese term for "train line".</p>
