Change AWS skill to only be AWS S3

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 											<i class="devicon-postgresql-plain colored"></i> PostgreSQL
 										</li>
 										<li class="aws-icon">
-											<i class="devicon-amazonwebservices-original colored"></i> Amazon Web Services
+											<i class="devicon-amazonwebservices-original colored"></i> Amazon Web Services S3
 										</li>
 									</ul>
 								</div>
