Add email address in about me section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 									<p>I'm a passionate software developer with a sharp mind for problem-solving and conceptualizing tough puzzles. As a quick learner, I use challenges as necessities that push me to maintain an open learning mind. I have ample experience building dynamic web applications and data visualizations using Rails, JavaScript, and React. Furthermore, I'm no stranger to backend languages like Python and Ruby.</p>
 									<p>There's no other feeling like seeing a project transform from simple wireframes and whiteboard concept maps into a seamless, aesthetically engaging product. At the forefront of all my productions, I set high expectations to push my own limits and ensure that I am always growing as a developer. I'm known for diving too deep, but also as a great team player.</p>
 									<p>When I'm away from the keyboard, I'm either exploring the great city with my DSLR, playing guitar and singing with friends, or in a local pick-up volleyball game.</p>
+									<p>Feel free to email explore my site or email me at tsao.jonathan13@gmail.com!</p>
 								</div>
 							</section>
 
